solved the comments